all the map libs

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>React App</title>
+    <title>Investigators Drill 1</title>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVs_Da8LA7YNsfI6VTGmuAlPTN4r5Fdv0&callback=initMap"
+async defer></script>
   </head>
   <body>
     <div id="root"></div>
