imports google maps react library and completes map drill

--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Investigators Drill 1</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVs_Da8LA7YNsfI6VTGmuAlPTN4r5Fdv0&callback=initMap"
-async defer></script>
+    <title>Investigators Drill 1 - Maps!</title>
   </head>
   <body>
     <div id="root"></div>
-    <!--
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
